docs: Updated dockerhub readme in CI pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,20 @@ jobs:
           docker push devatherock/minify-js:$TAG
           docker push devatherock/minify-js:latest
           
+  dockerhub_readme:
+    machine:
+      image: ubuntu-2204:2023.04.2
+    steps:
+      - checkout
+      - run: |
+          docker run -v $PWD:/workspace \
+              -e DOCKERHUB_USERNAME \
+              -e DOCKERHUB_PASSWORD \
+              -e DOCKERHUB_REPOSITORY='devatherock/minify-js' \
+              -e SHORT_DESCRIPTION='Github action/CI Plugin to minify html, javascript and css files' \
+              -e README_FILEPATH='/workspace/README.md' \
+              peterevans/dockerhub-description:3.4.1
+          
   functional_test:
     machine:
       image: ubuntu-2004:202010-01
@@ -97,17 +111,24 @@ workflows:
           filters:
             branches:
               only: master
+      - dockerhub_readme:
+          context:
+            - docker-credentials
+            - dockerhub-readme-credentials
+          requires:
+            - publish
       - functional_test:
           context:
             - docker-credentials
           requires:
-            - publish
+            - dockerhub_readme
       - notify:
           context:
             - docker-credentials
             - slack-webhook
           requires:
             - functional_test
+            
   release:
     jobs:
       - publish_release:
