--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.3-groovy-3.0'
 }
 
 test {
+    useJUnitPlatform()
     testLogging {
         events 'passed', 'failed'
     }
