--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging {
+        showStandardStreams = Boolean.getBoolean('test.logs')
         events 'passed', 'failed'
     }
 }
